# haskabelle

./: .hgignore  AGENDA  COPYRIGHT  Converter.hs  Haskabelle.hs  Hsimp.cabal  Hsimp.hs  Importer.hs  IsaSyntax.hs  Main.hs  Makefile  README  Stmt.hs  Testing.hs
Data/Generics/: Env.hs
Hsimp/: Convert.hs  IsaSyntax.hs  Printer.hs
adapt/: adapt.txt  mk_adapt.ML
admin/: builddoc  config  haskabelle  haskabelle.cabal  mail-attach  makedist  mira.py  regression  regression_isatest  run_regression
default/: Generated_Adapt.hs  Prelude.thy  README  Raw.hs  adapt.txt
doc/: Contents  doc-notes.txt  extending.txt  haskabelle.html  haskabelle_pres.tex  implementation-notes.txt  presentation.txt
doc-src/: ROOT
doc-src/Haskabelle/: Haskabelle.thy  IsaMakefile  Makefile  haskabelle.tex  style.sty
doc/announce/: haskabelle.tex
etc/: settings
ex/: StateMonads.thy  Stmt.hs  Tree.thy  config.xml  monads.xml
ex/src_hs/: AVL.hs  Adaptions.hs  AsPatterns.hs  Base.hs  ClassAdaptions.hs  Classes.hs  Closure.hs  Cover.hs  Depend.hs  Enum.hs  Enumerations.hs  Finite_Map.hs  Float.hs  Fset.hs  Guards.hs  Integers.hs  Nat.hs  (+28 more)
importer/: AList.hs  Adapt.hs  AdaptMapping.hs  AdaptTable.hs  Configuration.hs  Conversion.hs  ConversionUnit.hs  Convert.hs  DeclDependencyGraph.hs  Env.hs  FilePrinter.hs  General.hs  Gensym.hs  Hsx.hs  Ident_Env.hs  Isa.hs  IsaSyntax.hs  LexEnv.hs  Library.hs  Mapping.hs  Msg.hs  Preprocess.hs  Printer.hs  ReadAdapt.hs  Utilities.hs  Version.hs
lib/: buildbin  mk_adapt  mk_adapt.ML  regression
misc/: Prelude.thy  adapt.txt  config.xsd  mk_adapt.ML
(+26 files in other folders)
