Name:		Hsimp
Version:	0.2
Cabal-Version:  >= 1.2
License:	BSD3
License-File:	LICENSE
Author:		Patrick Bahr
Homepage:	
Category:	Language
Synopsis:	Translates Haskell into Isabelle

Executable importer
  Build-Depends:	uniplate base haskell-src-exts QuickCheck-2.0 template-haskell xml
  Exposed-modules:
    Importer
  Main-Is:         Main.hs
  Hs-Source-Dirs:  .
  Extensions:	glasgow-exts
