cabal-version:       >= 1.2
name:                haskabelle
version:             Haskabelle2009
synopsis:            Haskabelle is a converter from Haskell source files
                     to Isabelle/HOL theories implemented in Haskell itself.
description:         Haskabelle is a converter from Haskell source files
                     to Isabelle/HOL theories implemented in Haskell itself.
category:            Math
license:             BSD
author:              Florian Haftmann
maintainer:          haftmann@in.tum.de
build-type:          Simple

flag split_base
  default: True

executable haskabelle
  main-is:           Main.hs
  extensions:        RankNTypes

  if flag(split_base)
    build-depends:   directory, filepath, mtl, containers, haskell98, pretty
  build-depends:     base, haskell-src-exts==0.4.6, xml, uniplate
